--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -189,12 +189,6 @@
 				</dict>
 			</array>
 		</dict>
-		<key>DisabledAML</key>
-		<array>
-			<string>SSDT.aml</string>
-			<string>SSDT-XCPM.aml</string>
-			<string>SSDT-PluginType1.aml</string>
-		</array>
 		<key>DropTables</key>
 		<array>
 			<dict>
@@ -243,6 +237,13 @@
 		<false/>
 		<key>Timeout</key>
 		<integer>5</integer>
+	</dict>
+	<key>CPU</key>
+	<dict>
+		<key>HWPEnable</key>
+		<false/>
+		<key>UseARTFrequency</key>
+		<false/>
 	</dict>
 	<key>Comment</key>
 	<string>This file is for Skylake graphics that are natively supported</string>
@@ -435,10 +436,6 @@
 		<key>UseIntelHDMI</key>
 		<false/>
 	</dict>
-	<key>DisableDrivers</key>
-	<array>
-		<string>VBoxHfs</string>
-	</array>
 	<key>GUI</key>
 	<dict>
 		<key>#ScreenResolution</key>
@@ -587,7 +584,7 @@
 		<key>BoardManufacturer</key>
 		<string>Apple Inc.</string>
 		<key>BoardSerialNumber</key>
-		<string></string>
+		<string>C02634207GUHMHKJC</string>
 		<key>BoardType</key>
 		<integer>10</integer>
 		<key>BoardVersion</key>
@@ -617,9 +614,9 @@
 		<key>ProductName</key>
 		<string>MacBookPro13,1</string>
 		<key>SerialNumber</key>
-		<string></string>
+		<string>C02S88YZGVC1</string>
 		<key>SmUUID</key>
-		<string></string>
+		<string>88BD0916-E7B5-4AD7-96FC-BDB81489C2F5</string>
 		<key>Version</key>
 		<string>1.0</string>
 	</dict>
